# pokemon-rl

./: .coderabbit.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AI_TOOLS_EXPLAINED.md  CLAUDE.md  IMPROVEMENT_PROMPT.md  PLAN.md  README.md  SETUP_AI_TOOLS.md  decisions.md  du.exe.stackdump  pyproject.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  pylint.yml
content/: README.md  agent_knowledge.md  hooks.md  narrative.md  team_decisions.md  training_log.md
content/rl_concepts/: agent_env_action_reward_audience.md  agent_env_action_reward_technical.md  ppo_explained.md
notes/: behavioral_cloning_explained.md  diagnostic_findings.md  implementation_plan_sprint2.md  implementation_plan_sprint3A.md  implementation_plan_sprint4.md  next.md  panel3_full_conversation.md  panel4_full_conversation.md  panel5_obs_nn_overhaul.md  plan_2026-04-06.md  run_057_postmortem.md  sprint5_obs_completeness.md  sprint7_training_refinement.md  two_tower_migration_plan.md
notes/generalisation/: README.md
notes/legacy/: implementation_plan_sprint1.md  implementation_plan_sprint3.md  panel_discussion_learning_stuck.md  prompt_sprint5_6_7_2026-04-03.md  sprint5_obs_completeness.md  sprint6_nn_architecture.md
notes/panel/: panel_discussion_matchup_baseline.md  (+1 more)
scripts/: battle_sim.py  behavioral_cloning.py  benchmark_heuristic.py  benchmark_league.py  eval_vs_kakuna.py  evaluate.py  filter_ou_pool.py  generate_bc_data.py  kakuna_runner.py  measure_explvar_ceiling.py  quick_experiment.py  tensorboard.ps1  tournament.py  verify_setup.py  warmstart_critic.py
src/: callbacks.py  logging_config.py  obs_transfer.py  run_manager.py  selfplay_train.py  tier_baseline.py  train.py
tests/: test_core.py
(+17 files in other folders)
