[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-rl"
version = "0.1.0"
description = "Reinforcement learning agent for Gen 1 Pokemon battles"
requires-python = ">=3.11"
dependencies = [
    "poke-env>=0.13.0",
    "stable-baselines3>=2.0",
    "sb3-contrib>=2.0",
    "torch>=2.0",
    "numpy",
    "gymnasium",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "pytest>=8.0",
    "pytest-cov",
    "pytest-timeout",
    "pre-commit",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["showdown"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"src/train.py" = ["E402"]
"src/selfplay_train.py" = ["E402"]
"src/agents/*" = ["S311"]
"src/env/*" = ["S101", "S311"]
"scripts/*" = ["S311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
